<resources>
    <string name="app_name">AndroidServer</string>
    <string name="debugBtnNewText">NEW</string>
    <string name="debugBtnLoadText">LOAD</string>
    <string name="debugBtnSaveText">SAVE</string>
    <string name="debugBtnResetText">RESET</string>
    <string name="debugBtnSendText">Send</string>
    <string name="debugRadioUsersText">Users</string>
    <string name="debugRadioNodesText">Nodes</string>
    <string name="debugRadioTransmittersText">Transmitters</string>
    <string name="debugBtnBroadcastText">Broadcast</string>
    <string name="debugBtnRestartText">!!RESTART!!</string>
    <string name="debugNumberInputHint">ID</string>
    <string name="debugStringInputHint">Outbound message</string>
    <string name="debugTextCurrentCourseText">Current Course: </string>
    <string name="debugTextStateText"> --state-- </string>
</resources>