<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="broadcast"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/debugText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854" />

    <Button
        android:id="@+id/debugBtnNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="debugBtn"
        android:tag="new"
        android:text="@string/debugBtnNewText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/debugBtnLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="debugBtn"
        android:tag="load"
        android:text="@string/debugBtnLoadText"
        app:layout_constraintStart_toEndOf="@+id/debugBtnNew"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/debugBtnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:onClick="debugBtn"
        android:tag="save"
        android:text="@string/debugBtnSaveText"
        app:layout_constraintStart_toEndOf="@+id/debugBtnNew"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/debugBtnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:onClick="debugBtn"
        android:tag="reset"
        android:text="@string/debugBtnResetText"
        app:layout_constraintStart_toEndOf="@+id/debugBtnNew"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debugTextCurrentCourseText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debugStringInput" />

    <EditText
        android:id="@+id/debugNumberInput"
        android:layout_width="47dp"
        android:layout_height="46dp"
        android:autofillHints="@string/debugNumberInputHint"
        android:ems="10"
        android:hint="@string/debugNumberInputHint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debugBtnNew" />

    <Button
        android:id="@+id/debugBtnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="debugBtn"
        android:tag="send"
        android:text="@string/debugBtnSendText"
        app:layout_constraintStart_toEndOf="@+id/debugNumberInput"
        app:layout_constraintTop_toBottomOf="@+id/debugBtnSave" />

    <Button
        android:id="@+id/debugBtnBroadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="debugBtn"
        android:tag="broadcast"
        android:text="@string/debugBtnBroadcastText"
        app:layout_constraintStart_toEndOf="@+id/debugBtnSend"
        app:layout_constraintTop_toBottomOf="@+id/debugBtnSave" />

    <EditText
        android:id="@+id/debugStringInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/debugStringInputHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debugNumberInput" />

    <RadioGroup
        android:id="@+id/debugRadioGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/debugBtnBroadcast"
        app:layout_constraintTop_toBottomOf="@+id/debugBtnReset">

        <RadioButton
            android:id="@+id/dbgRadioUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="users"
            android:text="@string/debugRadioUsersText" />

        <RadioButton
            android:id="@+id/dbgRadioNodes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="nodes"
            android:text="@string/debugRadioNodesText" />

        <RadioButton
            android:id="@+id/dbgRadioTransmitters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="transmitters"
            android:text="@string/debugRadioTransmittersText" />
    </RadioGroup>

    <Button
        android:id="@+id/dbgButtonRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="triggerRebirth"
        android:text="@string/debugBtnRestartText"
        app:layout_constraintBottom_toTopOf="@+id/debugText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentCourse"
        app:layout_constraintVertical_bias="0.94" />

    <TextView
        android:id="@+id/debugState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/dbgButtonRestart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>